--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>voucherjoy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>GIFTY - Digital Gift Cards & Vouchers</title>
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="GIFTY - Digital Gift Cards & Vouchers">
+    <meta name="description" content="GIFTY - Your one-stop platform for digital gift cards and vouchers. Send joy instantly to your loved ones with our wide selection of digital gifts." />
+    <meta name="keywords" content="gift cards, digital vouchers, e-gift cards, digital gifts, GIFTY">
+    <meta name="author" content="GIFTY" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gifty.com/" />
+    <meta property="og:title" content="GIFTY - Digital Gift Cards & Vouchers" />
+    <meta property="og:description" content="Send joy instantly to your loved ones with our wide selection of digital gift cards and vouchers." />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://gifty.com/" />
+    <meta property="twitter:title" content="GIFTY - Digital Gift Cards & Vouchers" />
+    <meta property="twitter:description" content="Send joy instantly to your loved ones with our wide selection of digital gift cards and vouchers." />
+    <meta property="twitter:image" content="/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
 
   <body>
